# sovereign-agt

./: Cargo.toml  README.md  SOVEREIGN.md
SnapKitty.AGT.Cli/: Program.cs  SnapKitty.AGT.Cli.csproj
SnapKitty.AGT.Grpc/: GovernanceService.cs  SnapKitty.AGT.Grpc.csproj
SnapKitty.AGT.Mesh/: Identity.cs  SnapKitty.AGT.Mesh.csproj
SnapKitty.AGT.OS/: PolicyKernel.cs  SnapKitty.AGT.OS.csproj
SnapKitty.AGT.Runtime/: Lifecycle.cs  SnapKitty.AGT.Runtime.csproj
SnapKitty.AGT.SRE/: CircuitBreaker.cs  SnapKitty.AGT.SRE.csproj
SnapKitty.AGT.Tests/: AgtTests.cs  SnapKitty.AGT.Tests.csproj
src/: lib.rs
